# cloudguard-cli

./: .editorconfig  .envrc  .gitignore  .guix-channel  .hypatia-baseline.json  .tool-versions  0-AI-MANIFEST.a2ml  ABI-FFI-README.md  AI.a2ml  Adjust.a2ml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Containerfile  Dust.a2ml  EXPLAINME.adoc  GOVERNANCE.md  Intend.a2ml  Justfile  Lust.a2ml  MAINTAINERS.md  Must.a2ml  PLACEHOLDERS.md  QUICKSTART-DEV.adoc  QUICKSTART-MAINTAINER.adoc  QUICKSTART-USER.adoc  READINESS.md  README.adoc  README.md  ROADMAP.adoc  RSR_OUTLINE.adoc  SECURITY.md  TEST-NEEDS.md  TOPOLOGY.md  Trust.a2ml  cliff.toml  eclexiaiser.toml  flake.nix  guix.scm  k9iser.toml  (+5 more)
.devcontainer/: Containerfile  README.adoc  devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  custom.yml  documentation.yml  feature_request.yml  question.yml
.github/workflows/: k9-svc-validation.yml
.hypatia/: activity.jsonl  last-visit.json
.machine_readable/: ADJUST.contractile  CLADE.a2ml  ECOSYSTEM.a2ml  INTENT.contractile  MUST.contractile  STATE.a2ml  STATE.scm  TRUST.contractile
.reuse/: dep5
.well-known/: security.txt
benches/: cloudguard_bench.rs
container/: .gatekeeper.yaml  0-AI-MANIFEST.a2ml  Containerfile  README.adoc  compose.toml  ct-build.sh  deploy.k9.ncl  entrypoint.sh  manifest.toml  vordr.toml
docs/: AI-CONVENTIONS.md  AI-INSTALL-README-SECTION.adoc  AI_INSTALLATION_GUIDE.adoc  CITATIONS.adoc  QUICKSTART.md  THREAT-MODEL.md  tech-debt-2026-05-26.md
ffi/zig/: build.zig
src/: lib.rs  main.rs
tests/: smoke_test.rs
(+21 files in other folders)
