# SPDX-License-Identifier: PMPL-1.0-or-later

[package]
name = "cloudguard-cli"
version = "0.1.0"
edition = "2021"
authors = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]
description = "CloudGuard CLI — Cloudflare domain security hardening, auditing, and management"
license = "PMPL-1.0-or-later"
repository = "https://github.com/hyperpolymath/cloudguard-cli"
readme = "README.adoc"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
once_cell = "1"

[lib]
name = "cloudguard_cli"
path = "src/lib.rs"

[[bin]]
name = "cloudguard"
path = "src/main.rs"

[[bench]]
name = "cloudguard_bench"
harness = false

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1"
